build/log/idf_py_stderr_output_2929959
/home/seanshea/esp_32_projects/clock-proto-1.0/main/main.c: In function 'app_main':
/home/seanshea/esp_32_projects/clock-proto-1.0/main/main.c:160:5: error: implicit declaration of function 'init_alarm_container'; did you mean 'init_alarm_containter'? [-Werror=implicit-function-declaration]
  160 |     init_alarm_container(&alarm_container);
      |     ^~~~~~~~~~~~~~~~~~~~
      |     init_alarm_containter
cc1: some warnings being treated as errors
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:76: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:4656: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
